# ALP

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DEVELOPMENT.md  Makefile  NOTICE  README.md  README.perf.txt  README_pLaplacian.md  README_pouya_BRANCH.txt  RESULTS.md  Results.README.md  alpdense.md  alpdense.sh  banshee.mk  benchmark.sh  bootstrap.sh  bsp.mk  bsp1d.mk  changelog.md  configure  doxy.conf  hyperdags.sh  label_test.sh  pLaplacian_compile.sh  pinned.txt  reference.mk  scaling.sh  set_omp.sh  smoketests.sh  unittests.sh
examples/: CMakeLists.txt  Makefile  alp_ascend_softMaxOp-manuallyTiled.cpp  ascend_flashattentionOp-v2.cpp  ascend_flashattentionOp-v3.cpp  ascend_flashattentionOp.cpp  compile_and_run_flashattention.sh  compile_and_run_onlinesoftmax.sh  matching.cpp  online_softmax.py  onlinesoftmax_custom.py  onlinesoftmax_custom_main.cpp  softmax_custom-v1-1.cpp  softmax_custom-v1.cpp  softmax_custom-v3.cpp  softmax_custom-v4.cpp  softmax_custom-v5.cpp  softmax_custom_main.cpp  sp.cpp
examples/unittests/: HOST_TEST_TEMPLATE.cpp  Makefile  alp_ascend_addOp.cpp  alp_ascend_addOpv1.cpp  alp_ascend_movedataOpv01.cpp  alp_ascend_onlinesoftmaxOp.cpp  alp_ascend_softmaxOp.cpp  alp_ascend_softmaxOpv1.cpp  alp_ascend_softmaxOpv3.cpp  alp_ascend_softmaxOpv4.cpp  check_data_movedataOp-v01.py  check_data_onlinesoftmaxOp.py  check_data_softmaxOp-v3.py  check_data_softmaxOp-v4.py  check_data_softmaxOp.py  compile.sh  compile_and_run_addOp.sh  compile_and_run_addOpv1.sh  compile_and_run_movedataOp-v01.sh  compile_and_run_onlinesoftmaxOp.sh  compile_and_run_softmaxOp-v1.sh  compile_and_run_softmaxOp-v3.sh  compile_and_run_softmaxOp-v4.sh  compile_and_run_softmaxOp.sh  generate_host_code.py  make_data_addOp.py  make_data_addOpv1.py  make_data_movedataOp-v01.py  make_data_onlinesoftmaxOp.py  make_data_softmaxOp-v1.py  make_data_softmaxOp-v3.py  make_data_softmaxOp-v4.py  make_data_softmaxOp.py  test_all.sh
include/: CMakeLists.txt  alp.hpp  alpAscend.hpp  graphblas.hpp
include/alp/: CMakeLists.txt  backends.hpp  blas0.hpp  blas1.hpp  blas2.hpp  blas3.hpp  config.hpp  density.hpp  descriptors.hpp  exec.hpp  identities.hpp  imf.hpp  imf_static.hpp  init.hpp  internalops.hpp  internalrels.hpp  io.hpp  iomode.hpp  matrix.hpp  monoid.hpp  ops.hpp  phase.hpp  rc.hpp  rels.hpp  scalar.hpp  semiring.hpp  smf.hpp  storage.hpp  structures.hpp  type_traits.hpp  utils.hpp  vector.hpp  views.hpp
include/asclib/: analytic_model.hpp  ascendlib.hpp
include/graphblas/: CMakeLists.txt  NonzeroStorage.hpp  SynchronizedNonzeroIterator.hpp  backends.hpp  benchmark.hpp  blas0.hpp  blas1.hpp  blas2.hpp  blas3.hpp  collectives.hpp  config.hpp  constant_matrices.hpp  coordinates.hpp  descriptors.hpp  distribution.hpp  exec.hpp  final.hpp  identities.hpp  imf.hpp  init.hpp  internalops.hpp  io.hpp  iomode.hpp  matrix.hpp  monoid.hpp  nonzeroStorage.hpp  ops.hpp  phase.hpp  pinnedvector.hpp  properties.hpp  rc.hpp  scalar.hpp  selection_ops.hpp  semiring.hpp  spmd.hpp  storage.hpp  structures.hpp  tags.hpp  type_traits.hpp  utils.hpp  (+2 more)
include/sparseblas/: nist.h  sparseblas.h  spblas.h
include/transition/: blas_sparse.h  blas_sparse_vec.h  fuselets.h  kml_iss.h  solver.h  sparseblas.h  spblas.h  spblas.h.in  spblas_impl.h
src/: ALPGraphBLASConfig.cmake.in  CMakeLists.txt  ascendcc.in  deps.env  get_arch_flags.in  get_arch_info.in  grbcxx.in  grbrun.in  setenv.in
src/alp/: CMakeLists.txt  descriptors.cpp  rc.cpp
src/graphblas/: CMakeLists.txt  descriptors.cpp  dmapper.cpp  rc.cpp
src/sparseblas/: CMakeLists.txt  nist.cpp  sparseblas.cpp
src/transition/: CMakeLists.txt  fuselets.cpp  kml_iss.cpp  native.hpp  solver.cpp  solvers.cpp  sparse_vector_impl.hpp  sparseblas.cpp  spblas.cpp
tests/: CMakeLists.txt  RBGaussSeidel.cpp  Tests.md  add15d.cpp  add15m.cpp  auto_launcher.cpp  bench_kernels.h  buildVector.cpp  clearMatrix.cpp  copyAndAssignVectorIterator.cpp  dense_spmv.cpp  distribution.cpp  dot.cpp  dot_unit.cpp  eWiseMatrix.cpp  emptyVector.cpp  fma.cpp  fork_launcher.cpp  grb_test_runner.py.in  kmeans_unit.cpp  manual_launcher.cpp  masked_mxv.cpp  matrixIterator.cpp  matrixSet.cpp  moveMatrix.cpp  mul15i.cpp  mul15m.cpp  mxm.cpp  mxm_elementwise.cpp  outerProduct.cpp  parse_env.sh  parser.cpp  reduce.cpp  sequential_launcher.cpp  set.cpp  sparse_mxv.cpp  sparse_vxm.cpp  stdVector.cpp  summarise.sh  utilParserTest.cpp  (+5 more)
tests/banshee/: 1d_baseline.cpp  1d_ssr.cpp  2d_baseline.cpp  conjugate_gradient.cpp  knn.cpp  simple_pagerank.cpp  vmx.cpp
tests/hook/: collectives_blas0.cpp  collectives_blas1.cpp  collectives_blas1_raw.cpp  dot.cpp  grb_launcher.cpp  knn.cpp  pagerank.cpp  reduce.cpp  setvector.cpp
tests/launcher/: Tests.md  conjugate_gradient.cpp  dot.cpp  gnn_single_inference.cpp  graphchallenge_nn_single_inference.cpp  hpcg_system_building_utils.hpp  hpcg_test.cpp  knn.cpp  label.cpp  label_test.cpp  mxv.cpp  scaling.cpp  simple_pagerank.cpp  simple_pagerank_broadcast.cpp  sparse_vxm.cpp  vxm.cpp
tests/mlir/: quick_test.cpp  test.x
tests/performance/: CMakeLists.txt  alp_cholesky.cpp  alp_mxm.cpp  bench_kernels.c  bench_kernels.h  blas_mxm.cpp  dot.cpp  fma.cpp  label.cpp  lapack_cholesky.cpp  lapack_dgeqrf.cpp  lapack_dgesvd.cpp  lapack_dgetrf.cpp  lapack_dpotri.cpp  lapack_dstedc.cpp  lapack_dsyevd.cpp  lapack_dsytrd.cpp  lapack_mxm.cpp  lapack_zhetrd.cpp  performancetests.sh  reduce.cpp  scaling.cpp  spmspm.cpp  spmspv.cpp  spmv.cpp
tests/smoke/: CMakeLists.txt  alp_backsubstitution.cpp  alp_cholesky.cpp  alp_forwardsubstitution.cpp  alp_gemm.cpp  alp_potri.cpp  alp_stedc.cpp  alp_zgeqrf.cpp  alp_zgesvd.cpp  alp_zgetrf.cpp  alp_zgsvd.cpp  alp_zheevd.cpp  alp_zhetrd.cpp  amg.cpp  bfs.cpp  bicgstab.cpp  conjugate_gradient.cpp  gmres.cpp  graph_clustering_launcher.cpp  graph_partition_launcher.cpp  graphchallenge_nn_multi_inference.cpp  graphchallenge_nn_single_inference.cpp  hpcg.cpp  hpcg_matrix_building_utils.hpp  hpcg_system_building_utils.hpp  hpcg_test.cpp  kcore_decomposition.cpp  kmeans.cpp  knn.cpp  label.cpp  label_test.cpp  manual_launcher.cpp  (+14 more)
(+773 files in other folders)
